Style FIx: section content overflow

--- a/g2p_ati_service_provider_portal/static/src/css/style.css
+++ b/g2p_ati_service_provider_portal/static/src/css/style.css
@@ -264,24 +264,25 @@ h1 {
 
 .section-content {
     flex: 1 1 auto;
-    min-height: 600px;
+    max-height: 600px !important;
+    overflow-y: auto !important;
     padding-left: 1.5rem;
     padding-right: 1.5rem;
+    padding-bottom: 4rem;
 }
 
 .section-footer {
-    flex-shrink: 0;
-    display: flex;
-    justify-content: flex-end;
-    position: relative;
-    padding: 10px;
 
+    position: absolute;
+    background-color: white;
+    bottom: 0;
+    left: 0;
+
+    padding: 10px;
     margin: 0px 10px;
     border-top: 1px solid #ddd;
-    margin-bottom: 10px;
-    display: grid;
-    grid-template-columns: auto auto;
-    column-gap: 20px;
+    width: 100%;
+    column-gap: 10px;
 }
 
 input[type="radio"] {
